[package]
name = "aerodune-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3"
surrealdb = "1.0"
anyhow = "1.0.75"
once_cell = "1.18"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
leptos = { version = "0.5", features = ["csr", "nightly"] }
leptos_router = { version = "0.5", features = ["csr", "nightly"] }
leptos_meta = { version = "0.5", features = ["csr", "nightly"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[workspace]
members = ["src-tauri"]
